# barnanofn

./: .gitignore  Nöfn.py  README.md  data.py  fetch_name_data.sh  game.py  names.py  pyproject.toml
pages/: Niðurstöður.py
